package and app json updated

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "JSON",
     "freecodecamp"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmadabdolsaheb/timestamp.git"
+  },
   "author": "ahmad abdolsaheb",
   "license": "MIT",
   "dependencies": {
